--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,7 +59,7 @@ a {
   text-shadow: -1px -1px 0 #7b5d20, 1px -1px 0 #7b5d20, -1px 1px 0 #7b5d20, 1px 1px 0 #7b5d20;
   min-width: 120px;
 }
-.btn-success:hover {
+.btn-success:hover , .btn-success.active {
   background-color: #006d5a !important;
   border-color: gold !important;
   color: gold !important;
@@ -144,8 +144,11 @@ a {
 }
 
 /* rs css */
-ul li {
+ul,
+ol {
   list-style: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
 }
 a {
   text-decoration: none !important;
