update đăng bài viết

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -157,6 +157,15 @@ a {
 p {
   margin-bottom: 0 !important;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0 !important;
+}
+
 /* chill */
 .post-item {
   background-color: #fdf8da;
